Bug 569270 - Assertion on child process shutdown in xpcshell. r=dwitte