modules/libpref/src/nsPrefBranch.cpp
@@ -827,11 +827,16 @@ NS_IMETHODIMP nsPrefBranch::RemoveObserver(const char *aDomain, nsIObserver *aOb
 
 #ifdef MOZ_IPC
   if (XRE_GetProcessType() == GeckoProcessType_Content) {
-    nsresult rv;
+    nsresult rv = NS_OK;
     mozilla::dom::ContentProcessChild *cpc = 
       mozilla::dom::ContentProcessChild::GetSingleton();
-    NS_ASSERTION(cpc, "Content Protocol is NULL!");
-    rv = cpc->RemoveRemotePrefObserver(nsDependentCString(aDomain), mPrefRoot, aObserver);
+    // In case cpc doesn't exist here, we're silently returning (instead of
+    // asserting), because the child process is likely to be null
+    // when this is called during xpcom-shutdown.
+    if (cpc)
+      rv = cpc->RemoveRemotePrefObserver(nsDependentCString(aDomain), 
+                                         mPrefRoot, 
+                                         aObserver);
     return rv;
   }
 #endif
